# ZXingQtCamReader

./: CMakeLists.txt  ZXingQtCamReader.cpp  ZXingQtCamReader.qml  ZXingQtReader.h
